kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Rook/Ceph dashboard
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: sh-ceph.svg
    gethomepage.dev/name: Rook/Ceph
    gethomepage.dev/app: rook-ceph
spec:
  hostnames: ["rook.hemma.dev"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
